# BimmerDimmer

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  config.yaml  pyproject.toml
.claude/: session-history.md
docs/superpowers/plans/: 2026-03-26-bluetooth-safety.md
docs/superpowers/specs/: 2026-03-26-bluetooth-safety-design.md  2026-03-26-usb-tethering-design.md
src/slower/: __init__.py  config.py  main.py
src/slower/bmw/: __init__.py  connection.py  e90_dme.py  recovery.py  safety.py  uds.py  watchdog.py
src/slower/gps/: __init__.py  provider.py  speed_limits.py
src/slower/limiter/: __init__.py  controller.py
src/slower/transport/: __init__.py  ble.py  health.py  spp.py  usb.py  wifi.py
src/slower/web/: __init__.py  server.py
src/slower/web/templates/: index.html
src/slower_watchdog/: __init__.py  main.py
tests/: test_connection.py  test_connection_monitor.py  test_dme_protection.py  test_e90_dme.py  test_gps_provider.py  test_gps_validation.py  test_recovery.py  test_safety.py  test_speed_limits.py  test_transport_health.py  test_usb_transport.py
